package edu.fiuba.algo3.modelo;

public abstract class Obstaculo {

    public abstract void penalizar(Vehiculo unVehiculo);
}
