package edu.fiuba.algo3.modelo.sorpresa;

public class Sorpresa {
    public Sorpresa () {

    }
}
